--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,14 @@
     "require": {
         "silex/silex": "2.0.*@dev",
         "doctrine/dbal": "2.2.*",
-        "twig/twig": ">=0.18,<=2.0-dev"
+        "twig/twig": ">=0.18,<=2.0-dev",
+        "symfony/form": "~2.5",
+        "symfony/security-csrf": "~2.5",
+        "symfony/twig-bridge": "~2.5",
+        "symfony/translation": "~2.5",
+        "symfony/validator": "~2.5",
+        "symfony/config": "~2.5",
+        "symfony/locale": "~2.5"
     },
     "require-dev": {
         "symfony/browser-kit": ">=2.3,<2.4-dev",
