--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,13 @@
 {
+    "name": "dz1984/silexbone",
+    "description": "This is a Silex Skeleton.",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Donald Zhan",
+            "email": "donald.zhan1984@gmail.com"
+        }
+    ],
     "require": {
         "silex/silex": "2.0.*@dev",
         "doctrine/dbal": "2.2.*",
@@ -13,6 +22,8 @@
     },
     "require-dev": {
         "symfony/browser-kit": ">=2.3,<2.4-dev",
-        "symfony/css-selector": ">=2.3,<2.4-dev"
-    }
+        "symfony/css-selector": ">=2.3,<2.4-dev",
+        "phpunit/phpunit": "~4.7@dev"
+    },
+    "minimum-stability": "dev"
 }
