--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dz1984/silexbone",
+    "name": "dz1984/Silexbone",
     "description": "This is a Silex Skeleton.",
     "license": "MIT",
     "authors": [
